# gw-currency-wallet/internal/delivery/docs/swagger.json
@@ -25,7 +25,7 @@
                         "type": "string",
                         "example": "\"BEARER {JWT}\"",
                         "description": "JWT",
-                        "name": "Authentication",
+                        "name": "Authorization",
                         "in": "header",
                         "required": true
                     }
@@ -63,9 +63,18 @@
                         "type": "string",
                         "example": "\"BEARER {JWT}\"",
                         "description": "JWT",
-                        "name": "Authentication",
+                        "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "top up request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/delivery.fundsRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -101,7 +110,7 @@
                         "type": "string",
                         "example": "\"BEARER {JWT}\"",
                         "description": "JWT",
-                        "name": "Authentication",
+                        "name": "Authorization",
                         "in": "header",
                         "required": true
                     },
@@ -154,7 +163,7 @@
                         "type": "string",
                         "example": "\"BEARER {JWT}\"",
                         "description": "JWT",
-                        "name": "Authentication",
+                        "name": "Authorization",
                         "in": "header",
                         "required": true
                     }
@@ -288,9 +297,18 @@
                         "type": "string",
                         "example": "\"BEARER {JWT}\"",
                         "description": "JWT",
-                        "name": "Authentication",
+                        "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "withdrawal request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/delivery.fundsRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -335,13 +353,16 @@
             "type": "object",
             "properties": {
                 "EUR": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 10
                 },
                 "RUB": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 45.5
                 },
                 "USD": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 120
                 }
             }
         },
@@ -396,6 +417,20 @@
                 },
                 "new_balance": {
                     "$ref": "#/definitions/delivery.balance"
+                }
+            }
+        },
+        "delivery.fundsRequest": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number",
+                    "example": 234.56
+                },
+                "currency": {
+                    "description": "(USD, RUB, EUR)",
+                    "type": "string",
+                    "example": "rub"
                 }
             }
         },
