# gw-currency-wallet/internal/validator/exchange.go
@@ -7,8 +7,8 @@ import (
 var AllowedCurrency = []string{"rub", "usd", "eur"}
 
 func ValidateExchangeRequest[T constraints.Integer | constraints.Float](v *Validator, fromCurrency, toCurrency string, amount T) {
-	v.Check(IsPermittedValue(fromCurrency, AllowedCurrency...), "from_currency", "currency not supported")
-	v.Check(IsPermittedValue(toCurrency, AllowedCurrency...), "to_currency", "currency not supported")
+	v.Check(IsPermittedValue(fromCurrency, AllowedCurrency...), "from_currency", "supported currencies: rub, usd, eur")
+	v.Check(IsPermittedValue(toCurrency, AllowedCurrency...), "to_currency", "supported currencies: rub, usd, eur")
 	v.Check(amount > 0, "amount", "cannot be less or equal to zero")
 	v.Check(fromCurrency != toCurrency, "currency", "source and target currencies cannot be the same")
 }
